# advent2024

./: README.md  conftest.py  pyproject.toml
src/advent2024/: __init__.py  cli.py
src/advent2024/days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  dayxx.py
tests/: test_dayxx.py
